Fixed horizontal scroll bug when mobile

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,6 @@ section {
 .results {
   display: flex;
   flex-wrap: wrap;
-  margin: 0px -15px;
 }
 
 .results .result {
